Recent customers on the home page
This uses a little database of customers that can then be used to
prepopulate some of the fields on the view/edit customer page.

--- a/src/css/themes/common.variables.styl
+++ b/src/css/themes/common.variables.styl
@@ -15,8 +15,8 @@
 // to match your app's branding.
 
 $primary   = #4d7f36
-$secondary = lighten($primary, 20%)
-$tertiary  = #3f3030
+$secondary = #3f3030
+$tertiary  = lighten($primary, 20%)
 
 $neutral   = #E0E1E2
 $positive  = #21BA45
